# omniplant

./: .gitignore  ARCHITECTURE.md  README.md  omniplant.db  requirements.txt
backend/: .env.example  .gitignore  main.py  omniplant.db  pyproject.toml  requirements.txt
backend/api/routers/: auth.py  ingest.py  users.py
backend/connection/: llama_parse.py  neo_4j.py
backend/core/: auth_middleware.py  config.py  database.py  security.py
backend/data/: Historical_WorkOrders_2024.csv  blueprint_coords.json
backend/models/: pending_tip.py  user.py
backend/scripts/: ingest_workorders.py  update_coords.py
backend/services/: imagekit_client.py  ingest_synthetic_pdfs.py  ingest_tips.py  ingest_workorders.py  query_pipeline.py  update_coords.py
backend/tests/: test_auth.py
frontend/: .env_example  app.py  requirements.txt  tmp_neo4j_conf_debug.py  tmp_neo4j_config_debug.py  tmp_neo4j_debug.py  tmp_neo4j_inspect.py  tmp_neo4j_scheme_debug.py  tmp_neo4j_test.py
frontend/components/: api_config.py  auth_cookie.py  auth_view.py  blueprint_view.py  dashboard_view.py  employee_time_view.py  kg_view.py  manage_employees_view.py  other_information_view.py
frontend/pages/: 1_Interactive_Blueprint.py
